fix(combo-button): add appropriate string truncation

--- a/packages/security/src/ComboButton/_combo-button.scss
+++ b/packages/security/src/ComboButton/_combo-button.scss
@@ -12,6 +12,7 @@
 
 @import '@carbon/themes/scss/tokens';
 
+@import 'carbon-components/scss/globals/scss/helper-mixins';
 @import 'carbon-components/scss/globals/scss/vars';
 
 @import 'carbon-components/scss/components/button/button';
@@ -26,6 +27,10 @@
   .#{$security--prefix}--combo-button {
     position: relative;
     display: inline-flex;
+  }
+
+  .#{$security--prefix}--combo-button__action {
+    @include text-overflow;
   }
 
   .#{$security--prefix}--combo-button__overflow-menu {
